# cv_turtlebot4

./: .env.example  .gitignore  AGENTS.md  PROJECT_HANDOFF.md  README.md  aux.sh  carta_de_suicidio_turtlebot2025.txt  l1.sh  l2.sh  pyproject.toml  requirements.txt  tutorial_turtlebot4.md
archive/: README.md  legacy_turtlebot_setup_notes_redacted.md  tutorial_turtlebot4_redacted.md
data/: dataset-metadata.json
docs/: ARCHITECTURE.md  AUTONOMOUS_LESS_CONSERVATIVE_RUN.md  EVALUATION.md  FSM_PERCEPTION_SUPERVISION_RUN.md  FSM_PERCEPTION_SUPERVISION_RUN_DRAFT.md  KNOWN_LIMITATIONS.md  MY_CONTRIBUTIONS.md  NAVIGATION_ARCHITECTURE.md  NAV_ABLATION_PROTOCOL.md  NAV_ANGLE_OFFSET_VALIDATION.md  NAV_BENCHMARKING.md  NAV_FAILURE_SCENARIOS.md  NAV_ITERATION_LOOP.md  NAV_METRICS_AND_SCORE.md  NAV_NEXT_DRY_RUN_PROTOCOL.md  NAV_OFFLINE_REALISM.md  NAV_PARAMETER_GUIDE.md  NAV_REAL_DATA_CAPTURE_FOR_TURNS.md  NAV_REAL_LOG_REGRESSION.md  NAV_REAL_LOG_REPLAY.md  NAV_RECOVERY_REPLAY_AND_ABLATION.md  NAV_RECOVERY_TURN_DEBUGGING.md  NAV_ROS_SIM_MACOS_NOTE.md  NAV_SCENARIO_REPLAY.md  PROJECT_HANDOFF.md  QR_ZXING_ARCHITECTURE.md  QR_ZXING_TEST_RUN.md  REACTIVE_NAV_RUNBOOK.md  REFERENCES.md  REPRODUCIBILITY.md  ROBOT_VALIDATION_PROTOCOL.md  RUN_LOCAL_AND_TURTLEBOT.md  SECURITY_AUDIT.md
info/: execution-codes.md
labels-gt/: annotate_yolo_boxes.py  annotation_state.json
papers/: VFHisto.md  bug-algos.md  focm.md
repo-cortijo/: README.md  control_linux.py  controller_template.py  enviador.py  recibidor_datos.py
requerimientos_turtlebot4-main/: README.md  control_linux.py  enviador.py
(+920 files in other folders)
