[project]
name = "turtlebot"
version = "0.1.0"
description = "TurtleBot4 UDP teleop and telemetry PC-side tools"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0",
    "opencv-python>=4.10",
    "ultralytics>=8.4.60",
    "zxing-cpp>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
